# devcrew

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: 01-visao-geral.md  02-arquitetura.md  03-roadmap.md  04-modelo-de-dados.md  05-multi-ia-fallback.md  06-interface.md  07-colaboracao-e-fluxos.md  README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial_schema.sql  0002_seed_demo_data.sql  0003_proposed_changes_content.sql  0004_app_settings.sql  0005_seed_showcase_data.sql
src-tauri/src/: git.rs  github.rs  lib.rs  secrets.rs
src/components/: app-shell.tsx
src/core/ai-router/: index.ts
src/core/db/: appSettings.ts  client.ts  employees.ts  index.ts  projects.ts  proposedChanges.ts  repos.ts  taskEvents.ts  tasks.ts  teams.ts  types.ts  usage.ts
src/core/diff-engine/: index.ts
src/core/employee-manager/: index.ts
src/core/git-service/: index.ts
src/core/github-service/: eventPolling.ts  index.ts  pullRequests.ts  token.ts
src/core/loop-controller/: index.ts
src/core/project-manager/: index.ts
src/core/provider/: index.ts
src/core/secrets/: index.ts
src/core/task-runner/: index.ts
src/core/terminal-service/: index.ts
src/core/theme/: index.ts
src/pages/: BoardPage.tsx  CostDashboardPage.tsx  DashboardPage.tsx  EmployeeEditorPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  TeamsPage.tsx  TerminalPage.tsx
(+33 files in other folders)
