[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
git2 = { version = "0.21.0", default-features = false, features = ["vendored-libgit2"] }
keyring = { version = "3.6.3", features = ["windows-native", "apple-native", "sync-secret-service"] }
reqwest = { version = "0.13.3", features = ["json"] }
tauri-plugin-dialog = "2.7.2"
